        - Fixed erroneous auto-removing of some dependencies which were brought
          by 'satisfy' query.
    - Download:
      - Manager:
        - Enabled basic HTTPS protocol support.
        - IPC is rewritten using UNIX sockets instead of fifos.
      - Progress:
        - Changed speed-o-meter accuracy to 4 seconds (previous value was
          2 seconds).
    - Cache:
      - New free subroutine 'verify_signature'.
      - BinaryVersion:
        - [API break] Renamed field 'source_name' to 'source_package_name'.
    - Config:
      - Added configuration option 'apt::cache-limit'. Thanks to
        Goswin von Brederlow <goswin-v-b@web.de>. (Closes: #533752)
      - New configuration option 'cupt::update::keep-bad-signatures'.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Mon, 15 Jun 2009 22:57:58 +0300

cupt (0.2.2) unstable; urgency=low

  * Cupt:
    - System:
      - Resolvers/Native:
        - When applying resolve actions, stick packages more aggressively.
      - Worker:
        - 'clean_archives': fixed callback before actual deletion.
        - 'clean_archives': delete only '.deb's.
        - 'clean_archives': fixed error message when deletion failed.
    - Core:
      - Comparing version strings: fixed comparison of versions like 'ab' and
        'ab5'.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Fri, 05 Jun 2009 19:40:19 +0300

cupt (0.2.1) unstable; urgency=low

  * cupt:
    - New 'screenshots' subcommand.
    - New 'clean' subcommand.
    - New 'autoclean' subcommand.
    - Implemented the option '--quiet'.
  * Cupt:
    - System:
      - Worker:
        - New 'clean_archives' method.
        - 'update_release_and_index_data': fixed deleting download progress
          immediately after end of all child processes.
        - 'update_release_and_index_data': don't download Packages/Sources
          when we know they are unchanged by provided hash sums.
      - Resolvers/Native: